# microtelegram

./: Dockerfile.bot  Dockerfile.server  database.db  docker-compose.yml  pyproject.toml  server.py  telegrambot.py
server/: ai.py  database.py  endpoints.py  requirements.txt  utils.py
server/models/: balance.py
server/prompts/: formatters.py  sql_builders.py
server/schema/: balance.py
